# bombay

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  cleanup.md
.github/workflows/: rust.yml
src/: lib.rs
src/client/: README.md  auth.rs  error.rs  mod.rs  request.rs  response.rs
src/client/endpoints/: README.md  artist.rs  mod.rs  mood.rs  playlist.rs  release.rs  user.rs
src/mc/: README.md  artist.rs  label.rs  mod.rs  mood.rs  playlist.rs  release.rs  user.rs  util.rs
tests/: mod.rs
tests/client/: mod.rs
tests/client/endpoint/: artist.rs  mod.rs  mood.rs  playlist.rs  release.rs  user.rs
