[package]
name = "bombay"
version = "0.0.1"
description = "Monstercat API Rust client"
categories = ["api-bindings"]
keywords = ["bombay", "monstercat", "api", "client"]
authors = ["xohmz"]
repository = "https://github.com/xohmz/bombay/"
readme = "README.md"
license = "MIT"
edition = "2021"
rust-version = "1.65"
exclude = [".github"]

[lib]
crate-type = ["lib"]

[dependencies]
const_format = "0.2.30"
serde = { version = "1.0" }
serde_json = "1.0"
serde_repr = "0.1.10"
serde_with = "2.2.0"
tokio = { version = "1", features = ["full"] }
ureq = { version = "2.4.0", features = ["json", "cookies"] }
uuid = { version = "1.2.2", features = ["serde"] }
url = { version = "2.3.1", features = ["serde"] }
iso8601-timestamp = { version = "0.2.7", features = ["serde"] }

[dev-dependencies]
lazy_static = "1.4.0"
totp-rs = "4.2.0"
test-with = { version = "0.9", default-features = false, features = ["resource"] }
