[package]
name = "bombay"
version = "0.0.4"
description = "Monstercat API Rust client"
categories = ["api-bindings"]
keywords = ["bombay", "monstercat", "api", "client"]
authors = ["xohmz"]
repository = "https://github.com/xohmz/bombay/"
readme = "README.md"
license = "MIT"
edition = "2021"
rust-version = "1.65"
exclude = [".github"]

[lib]
crate-type = ["lib"]

[dependencies]
const_format = "0.2"
serde = { version = "1.0" }
serde_json = "1.0"
serde_repr = "0.1"
serde_with = "3.4"
ureq = { version = "2.9", features = ["json", "cookies"] }
uuid = { version = "1.4", features = ["serde"] }
url = { version = "2.4", features = ["serde"] }
iso8601-timestamp = { version = "0.2", features = ["serde"] }

[dev-dependencies]
lazy_static = "1.4"
totp-rs = "5.4"
test-with = { version = "0.10", default-features = false, features = ["resource"] }
